<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_OVN_DATACHN" Id="{f6dc13cd-c756-4b2a-b9d7-54dd1ff18b02}">
    <Declaration><![CDATA[TYPE T_OVN_DATACHN :
STRUCT
	rSendData	: T_OvenSendData;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>