<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <POU Name="init_Ovn" Id="{75862f38-163f-408d-b463-c830698f3fe4}">
    <Declaration><![CDATA[FUNCTION init_Ovn : BOOL
VAR_INPUT
	pOvn			: POINTER TO T_OVN;
	/// instance array of all controller instances
	pCtrlInst		: POINTER TO fb_CtrlBase;
	/// common interface array of all controllers (main use for PLC)
	pCtrlCIf		: POINTER TO T_Ctrl_CIf;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[pOvn^.datachn.rSendData.fbDataChannel.InitChannel(SIZEOF(pOvn^.datachn.rSendData.rDataChannelItem), ADR(pOvn^.datachn.rSendData.rDataChannelItem));
pOvn^.datachn.rSendData.fbFifo.DataChannel := ADR(pOvn^.datachn.rSendData.fbDataChannel);
pOvn^.datachn.rSendData.fbFifo.FreeDataPointer := TRUE;
pOvn^.datachn.rSendData.fbFifo.Enable := TRUE;

pOvn^.ctrl.fbOvn_Ibh.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pOvn^.id.Ovn_Ibh);
pOvn^.ctrl.fbOvn.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pOvn^.id.Ovn);
pOvn^.ctrl.fbOvn.IBH := ADR(pOvn^.ctrl.fbOvn_Ibh);
pOvn^.ctrl.fbOvn.DataChannel := ADR(pOvn^.datachn.rSendData.fbFifo);]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>